--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ table, th, td {
 	shape-rendering: crispEdges;
 }
 svg.flowerpatchVisualization {
-  max-width: 100vw;
+  max-width: 100vh;
   max-height: 100vh;
   width: 100%;
   height: auto;
@@ -41,7 +41,7 @@ svg.flowerpatchVisualization {
 }
 
 svg.flowerpatchVisualization image {
-  max-width: 100vw;
+  max-width: 100vh;
   max-height: 100vh;
   width: 100%;
   height: auto;
@@ -55,7 +55,7 @@ svg.flowerpatchVisualization image {
 
 #svg-container {
   flex: 1 1 0%;
-  max-width: 80vw;
+  max-width: 80vh;
 }
 
 #bee-list-container {
