--- a/css/style.css
+++ b/css/style.css
@@ -49,4 +49,36 @@ table, th, td {
 	font-weight: bold;
 }
 
+svg.flowerpatchVisualization {
+  max-width: 100vh;
+  max-height: 100vh;
+  width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+
+svg.flowerpatchVisualization image {
+  max-width: 100vh;
+  max-height: 100vh;
+  width: 100%;
+  height: auto;
+}
+
+#flex-container {
+  display: flex;
+  align-items: flex-start;
+  width: 100%;
+}
+
+#svg-container {
+  flex: 1 1 0%;
+  max-width: 80vh;
+}
+
+#bee-list-container {
+  margin-left: 30px;
+  min-width: 200px;
+}
+
 
