--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,11 @@ table, th, td {
 
 .container {
 	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+}
+
+.visDiv {
+	width: fit-content;:
 }
 
 .visBar {
