--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,21 @@ table, th, td {
 }
 
 .container {
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
+	display: flex;
+}
+
+.row {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	width: 100%;
+}
+
+.column{
+	display: flex;
+	flex-direction: column;
+	flex-basis: 100%
+	flex: 1;
 }
 
 .visDiv {
