--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+/* Custom Color variables*/
+:root {
+	--primary-red: red;
+	--primary-blue: blue;
+	--primary-lilac: #8A2BE2;
+	--primary-green: #00FF00;
+	--primary-yellow: yellow;
+	--primary-white: white;
+}
+
+
+
 svg {
   border: 1px solid black;
 }
