Implemented cat rendering to barchart

--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,9 @@
 	--primary-white: white;	
 
 	/* Property Colors*/
-	--cat1:orange;
-	--cat2:purple;
-	--cat3:pink;
+	--attr1:orange;
+	--attr2:purple;
+	--attr3:pink;
 }
 
 svg {
